sfdx-source/main/default/objects/VCC_Softphone_Directory__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>External ID field used to match with Cisco Phonebook records</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>