sfdx-source/main/default/objects/VCC_Softphone_Directory__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Contains the FirstName field from the Cisco Phonebook entries</description>
    <encryptionScheme>None</encryptionScheme>
    <label>FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>