sfdx-source/main/default/objects/VCC_Softphone_Directory__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>