sfdx-source/main/default/objects/VCC_Softphone_Directory__c/fields/Phonebook__c.field-meta.xml
<CustomField>
    <fullName>Phonebook__c</fullName>
    <description>Contains the Phonebook field from the Cisco Phonebook entries</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Phonebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>