sfdx-source/main/default/objects/VCC_Softphone_Directory__c/fields/VISN__c.field-meta.xml
<CustomField>
    <fullName>VISN__c</fullName>
    <label>VISN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VISN 1</fullName>
            </value>
            <value>
                <fullName>VISN 2</fullName>
            </value>
            <value>
                <fullName>VISN 4</fullName>
            </value>
            <value>
                <fullName>VISN 5</fullName>
            </value>
            <value>
                <fullName>VISN 6</fullName>
            </value>
            <value>
                <fullName>VISN 7</fullName>
            </value>
            <value>
                <fullName>VISN 8</fullName>
            </value>
            <value>
                <fullName>VISN 9</fullName>
            </value>
            <value>
                <fullName>VISN 10</fullName>
            </value>
            <value>
                <fullName>VISN 12</fullName>
            </value>
            <value>
                <fullName>VISN 15</fullName>
            </value>
            <value>
                <fullName>VISN 16</fullName>
            </value>
            <value>
                <fullName>VISN 17</fullName>
            </value>
            <value>
                <fullName>VISN 19</fullName>
            </value>
            <value>
                <fullName>VISN 20</fullName>
            </value>
            <value>
                <fullName>VISN 21</fullName>
            </value>
            <value>
                <fullName>VISN 22</fullName>
            </value>
            <value>
                <fullName>VISN 23</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>